--- a/styles/app.css
+++ b/styles/app.css
@@ -497,6 +497,7 @@ a {
     background-image: url("../images/svgs/shape1.svg");
     right: -45rem;
     top: -10rem;
+    display: none;
 }
 .destinations::before{
     background-image: url("../images/svgs/shape2.svg");
