--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 :root {
     --primary-color: #4169E1;
     --secondary-color:#87CEFA;
@@ -12,13 +19,15 @@
 }
 
 html {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-size: 62.5%; /* 10px */
     scroll-behavior: smooth;
 }
 
 *, *:after, *:before {
-    box-sizing: inherit;
+    -webkit-box-sizing: inherit;
+            box-sizing: inherit;
 }
 
 body {
@@ -59,12 +68,20 @@ a {
     background-color: var(--dark);
     width: 18rem;
     height: 5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-right: auto;
     margin-left: auto;
     font-family: var(--primary-font-md);
+    -webkit-transition: all 250ms ease-in;
+    -o-transition: all 250ms ease-in;
     transition: all 250ms ease-in;
 }
 
@@ -76,6 +93,8 @@ a {
 */
 
 .header {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(59, 55, 53, 0.5)), to(rgba(59, 55, 53, 0.5))), url("../images/header-bg-4.jpg");
+    background: -o-linear-gradient(rgba(59, 55, 53, 0.5), rgba(59, 55, 53, 0.5)), url("../images/header-bg-4.jpg");
     background: linear-gradient(rgba(59, 55, 53, 0.5), rgba(59, 55, 53, 0.5)), url("../images/header-bg-4.jpg");
     background-position: center;
     background-size: cover;
@@ -92,15 +111,25 @@ a {
 
 */
 .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 2.5rem 0;
 }
 
 .nav__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 /*
@@ -140,6 +169,8 @@ a {
 .menu__link {
     font-family: var(--primary-font-sb);
     color: var(--grey);
+    -webkit-transition: all 250ms ease;
+    -o-transition: all 250ms ease;
     transition: all 250ms ease;
 }
 
@@ -164,7 +195,9 @@ a {
     height: 0.3rem;
     border-radius: 10rem;
     background-color: var(--primary-color);
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
     z-index: -1;
 
     margin: 0 auto;
@@ -185,9 +218,12 @@ a {
     width: 25rem;
     background-color: var(--dark);
     padding: 2.5rem;
+    -webkit-transition: all 250ms ease-in-out;
+    -o-transition: all 250ms ease-in-out;
     transition: all 250ms ease-in-out;
     z-index: 100;
-    box-shadow: 3px 0 3px var(--dark);
+    -webkit-box-shadow: 3px 0 3px var(--dark);
+            box-shadow: 3px 0 3px var(--dark);
 }
 
 .nav-menu--open {
@@ -223,6 +259,8 @@ a {
 .mobile-menu__link {
     color: var(--white);
     position: relative;
+    -webkit-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
 }
 
@@ -237,6 +275,8 @@ a {
     height: .8rem;
     border-radius: 5rem;
     background-color: var(--primary-color);
+    -webkit-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
 }
 
@@ -257,6 +297,8 @@ a {
 
 */
 .nav-menu__links {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -265,8 +307,12 @@ a {
     border: 1px solid var(--white);
     display: block;
     padding: 1rem 2rem;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     text-align: center;
+    -webkit-transition: all 150ms ease-in;
+    -o-transition: all 150ms ease-in;
     transition: all 150ms ease-in;
 }
 
@@ -301,6 +347,8 @@ a {
     border: 1px solid var(--white);
     padding: 1rem 2.5rem;
     border-radius: 10rem;
+    -webkit-transition: all 150ms ease-in;
+    -o-transition: all 150ms ease-in;
     transition: all 150ms ease-in;
 }
 
@@ -322,9 +370,15 @@ a {
     width: 5.5rem;
     height: 5.5rem;
     border-radius: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     cursor: pointer;
 }
 
@@ -335,6 +389,8 @@ a {
     border-radius: 5rem;
     background-color: var(--white);
     position: relative;
+    -webkit-transition: all 150ms ease-in-out;
+    -o-transition: all 150ms ease-in-out;
     transition: all 150ms ease-in-out;
 }
 
@@ -346,6 +402,8 @@ a {
     height: 0.3rem;
     border-radius: 5rem;
     background-color: var(--white);
+    -webkit-transition: all 200ms ease-in-out;
+    -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
 }
 
@@ -362,11 +420,15 @@ a {
 }
 
 .nav__btn--open .nav__btn-line::before {
-    transform: translateY(8px) rotate(45deg);
+    -webkit-transform: translateY(8px) rotate(45deg);
+        -ms-transform: translateY(8px) rotate(45deg);
+            transform: translateY(8px) rotate(45deg);
 }
 
 .nav__btn--open .nav__btn-line::after {
-    transform: translateY(-8px) rotate(-45deg);
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+        -ms-transform: translateY(-8px) rotate(-45deg);
+            transform: translateY(-8px) rotate(-45deg);
 }
 
 
@@ -403,6 +465,8 @@ a {
     background-color: transparent;
     color: var(--white);
     border: 1px solid var(--white);
+    -webkit-transition: all 150ms ease-out;
+    -o-transition: all 150ms ease-out;
     transition: all 150ms ease-out;
 }
 
@@ -432,26 +496,41 @@ a {
 */
 .services{
     margin-top: -18rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin-left: -1rem;
     margin-right: -1rem;
 }
 .service{
     /* background-color: var(--white); */
+    background: -o-linear-gradient(58deg, rgba(200,214,255,1) 0%, rgba(228,245,255,1) 54%);
     background: linear-gradient(32deg, rgba(200,214,255,1) 0%, rgba(228,245,255,1) 54%);
     width: 30rem;
     height: 26rem;
     border-radius: 20rem;
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 0 3rem;
     color: var(--dark);
     margin-bottom: 2rem;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     margin-right: 1rem;
     margin-left: 1rem;
 }
@@ -517,12 +596,16 @@ a {
 
 
 .destinations__places{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin-left: -1rem;
     margin-right: -1rem;
 }
 .place{
+    background: -o-linear-gradient(58deg, rgba(255,255,255,1) 40%, rgba(228,245,255,1) 100%);
     background: linear-gradient(32deg, rgba(255,255,255,1) 40%, rgba(228,245,255,1) 100%); 
     border-radius: 5rem;
     padding: 2rem;
@@ -531,7 +614,9 @@ a {
     margin-right: 1rem;
     margin-left: 1rem;
     width: 30rem;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     overflow: hidden;
 }
 .place__banner{
@@ -543,13 +628,20 @@ a {
 .place__img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 .place__like{
     background-color: var(--white);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: absolute;
     top: 1.5rem;
     right: 1.5rem;
@@ -587,7 +679,8 @@ a {
     margin-bottom: 0.5rem;
     font-size: 1.8rem;
     white-space: nowrap;
-    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
     overflow: hidden;
 }
 .place__caption{
@@ -604,6 +697,8 @@ a {
     background-color: transparent;
     border: 1px solid var(--primary-color);
     margin-top: 3rem;
+    -webkit-transition: all 150ms ease-out;
+    -o-transition: all 150ms ease-out;
     transition: all 150ms ease-out;
 
 }
@@ -630,8 +725,13 @@ a {
     color: var(--dark);
     text-align: center;
     padding: 3rem 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
     margin: 6rem 0;
     position: relative;
     overflow: hidden;
@@ -673,12 +773,18 @@ a {
 }
 .newsletter__form{
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .newsletter__email-icon{
 
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+
+        flex-shrink: 0;
 }
 .newsletter__input{
     outline: none;
@@ -697,12 +803,20 @@ a {
     width: 5rem;
     height: 5rem;
     border-radius: 2rem;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     cursor: pointer;
-    box-shadow: 0 0 1.5rem rgba(231, 111, 81, 0.4);
+    -webkit-box-shadow: 0 0 1.5rem rgba(231, 111, 81, 0.4);
+            box-shadow: 0 0 1.5rem rgba(231, 111, 81, 0.4);
 }
 
 
@@ -739,16 +853,23 @@ a {
     width: 5rem;
     height: 5rem;
     background-color: var(--white);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border-radius: 2rem;
     position: absolute;
     right: 0;
     top: -2.5rem;
     left: 0;
     margin: 0 auto;
-    box-shadow: 0 0 1rem rgba(59, 55, 53, 0.05);
+    -webkit-box-shadow: 0 0 1rem rgba(59, 55, 53, 0.05);
+            box-shadow: 0 0 1rem rgba(59, 55, 53, 0.05);
 }
 
 .footer__wrapper{
@@ -795,8 +916,11 @@ a {
 */
 
 .footer__right{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin-bottom: 2rem;
 }
 .footer-list{
