--- a/styles/app.css
+++ b/styles/app.css
@@ -361,8 +361,8 @@ a {
 
 .nav__link--border:hover {
   border-color: transparent;
-  letter-spacing: 0.3rem;
-  padding: 1rem 1.45rem;
+  letter-spacing: 0.15rem;
+  padding: 1rem 1.98rem;
 }
 
 /*
@@ -954,8 +954,78 @@ a {
   font-size: 1.4rem;
   margin-top: 2rem;
 }
-.footer__dev-info{
-  font-size: 1.4rem;
+
+.dev-container {
+  position: relative;
+  font-family: "Inter", sans-serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 2rem;
-  font-weight: bold;
+  user-select: none;
+}
+
+.dev-link {
+  display: flex;
+  align-items: center;
+  color: #0284c7; /* text-sky-600 */
+}
+
+/* GitHub Link */
+.github-link {
+  transition: letter-spacing 0.3s;
+  font-family: "Inter", sans-serif;
+  margin: 0 0.3rem;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.github__icon {
+  color: #000;
+  height: 25px;
+  width: 25px;
+}
+
+.github-link:hover {
+  letter-spacing: 0.025em;
+}
+
+/* Info Card */
+.dev-info {
+  position: absolute;
+  top: -7rem;
+  left: -2rem;
+  display: none;
+  align-items: center;
+  gap: 1rem;
+  background: rgba(3, 105, 161, 0.15);
+  backdrop-filter: blur(4px);
+  padding: 1rem;
+  padding-right: 2rem;
+  border-radius: 999px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  z-index: 50;
+  transition: opacity 0.3s;
+}
+
+.dev-container:hover .dev-info {
+  display: flex;
+}
+
+/* Developer Image */
+.dev-image {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 10rem;
+  opacity: 0.85;
+  overflow: hidden;
+}
+
+/* Developer Text */
+.dev-text {
+  white-space: nowrap;
+  font-size: 1.2rem;
+  font-family: "Inter", sans-serif;
+  letter-spacing: 0.025em;
 }
